--- a/django_docker_project/.env_docker
+++ b/django_docker_project/.env_docker
@@ -7,3 +7,13 @@ DEFAULT_DB_PASSWORD = "postgres"
 DEFAULT_DB_SCHEMA = "public"
 DEFAULT_DB_HOST = "travello_db"
 DEFAULT_DB_PORT = "5432"
+
+# SENDING EMAIL CONFIGURATION
+EMAIL_BACKEND = 'django.core.mail.backends.smtp.EmailBackend'
+EMAIL_HOST = 'smtp.gmail.com'
+EMAIL_HOST_USER = 'anantaakash.podder@gmail.com'
+EMAIL_HOST_PASSWORD = 'vmklnqyihdesppka'
+# Port for sending e-mail.
+EMAIL_PORT = 587
+EMAIL_USE_TLS = True
+DEFAULT_FROM_EMAIL = 'anantaakash.podder@gmail.com'
