--- a/django_docker_project/.env_docker
+++ b/django_docker_project/.env_docker
@@ -11,9 +11,9 @@ DEFAULT_DB_PORT = "5432"
 # SENDING EMAIL CONFIGURATION
 EMAIL_BACKEND = 'django.core.mail.backends.smtp.EmailBackend'
 EMAIL_HOST = 'smtp.gmail.com'
-EMAIL_HOST_USER = 'anantaakash.podder@gmail.com'
-EMAIL_HOST_PASSWORD = 'vmklnqyihdesppka'
+EMAIL_HOST_USER = ''
+EMAIL_HOST_PASSWORD = ''
 # Port for sending e-mail.
 EMAIL_PORT = 587
 EMAIL_USE_TLS = True
-DEFAULT_FROM_EMAIL = 'anantaakash.podder@gmail.com'
+DEFAULT_FROM_EMAIL = ''
