--- a/django_docker_project/.env_docker
+++ b/django_docker_project/.env_docker
@@ -18,5 +18,6 @@ EMAIL_PORT = 587
 EMAIL_USE_TLS = True
 DEFAULT_FROM_EMAIL = 'anantaakash.podder@gmail.com'
 
+CELERY_TASK_DEFAULT_QUEUE = 'my_default_queue'
 CELERY_BROKER_URL = 'amqp://guest:guest@rabbitmq_server:5672//'
 CELERY_RESULT_BACKEND = 'rpc://'
