--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,6 @@ psycopg2-binary
 djangorestframework
 pillow
 celery==4.4.7
-django-celery-beat
+django-celery-beat==2.2.0
+django-celery-results==2.0.1
 python-dotenv==0.10.3
