--- a/django_docker_project/.env_docker
+++ b/django_docker_project/.env_docker
@@ -21,3 +21,5 @@ DEFAULT_FROM_EMAIL = 'anantaakash.podder@gmail.com'
 CELERY_TASK_DEFAULT_QUEUE = 'my_default_queue'
 CELERY_BROKER_URL = 'amqp://guest:guest@rabbitmq_server:5672//'
 CELERY_RESULT_BACKEND = 'rpc://'
+
+CACHE_LOCATION = redis://127.0.0.1:6379/1
