--- a/django_docker_project/.env_docker
+++ b/django_docker_project/.env_docker
@@ -16,7 +16,7 @@ EMAIL_HOST_PASSWORD = ''
 # Port for sending e-mail.
 EMAIL_PORT = 587
 EMAIL_USE_TLS = True
-DEFAULT_FROM_EMAIL = 'anantaakash.podder@gmail.com'
+DEFAULT_FROM_EMAIL = ''
 
 CELERY_TASK_DEFAULT_QUEUE = 'my_default_queue'
 CELERY_BROKER_URL = 'amqp://guest:guest@rabbitmq_server:5672//'
