- `redis_server` added in docker-compose.yml file

--- a/django_docker_project/.env_docker
+++ b/django_docker_project/.env_docker
@@ -22,4 +22,4 @@ CELERY_TASK_DEFAULT_QUEUE = 'my_default_queue'
 CELERY_BROKER_URL = 'amqp://guest:guest@rabbitmq_server:5672//'
 CELERY_RESULT_BACKEND = 'rpc://'
 
-CACHE_LOCATION = redis://127.0.0.1:6379/1
+CACHE_LOCATION = redis://redis_server:6379/1
