--- a/.gitignore
+++ b/.gitignore
@@ -99,3 +99,4 @@ static.tar.gz
 assets/
 django_docker_project/templates/travello/index_old.html
 celerybeat.pid
+django_docker_project/e-learniverse-project-firebase-adminsdk.json
