--- a/django_docker_project/.env_docker
+++ b/django_docker_project/.env_docker
@@ -23,3 +23,6 @@ CELERY_BROKER_URL = 'amqp://guest:guest@rabbitmq_server:5672//'
 CELERY_RESULT_BACKEND = 'rpc://'
 
 CACHE_LOCATION = redis://redis_server:6379/1
+
+GOOGLE_APPLICATION_CREDENTIALS = ".../django_docker_project/e-learniverse-project-firebase-adminsdk.json"
+DUMMY_ANDROID_TOKEN = ""
