--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,9 @@ Django==3.1.2
 django-debug-toolbar==3.1.1
 sqlparse==0.4.3
 psycopg2-binary
-djangorestframework
-pillow
+djangorestframework==3.14.0
+djangorestframework-simplejwt==5.2.2
+Pillow==9.5.0
 celery==4.4.7
 django-celery-beat==2.2.0
 django-celery-results==2.0.1
