--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,75 @@
+amqp==2.6.1
 asgiref==3.2.10
-Django==3.1.2
-django-debug-toolbar==3.1.1
-sqlparse==0.4.3
-psycopg2-binary
-djangorestframework==3.14.0
-djangorestframework-simplejwt==5.2.2
-Pillow==9.5.0
+astroid==2.15.6
+billiard==3.6.4.0
+CacheControl==0.13.0
+cachetools==5.3.1
 celery==4.4.7
+certifi==2023.5.7
+charset-normalizer==3.1.0
+click==8.1.3
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.2.0
+cron-descriptor==1.3.0
+Deprecated==1.2.13
+dill==0.3.6
+Django==3.1.2
 django-celery-beat==2.2.0
 django-celery-results==2.0.1
-python-dotenv==0.10.3
-redis==4.0.0
+django-debug-toolbar==3.1.1
 django-redis==5.0.0
+django-timezone-field==4.2.3
+djangorestframework==3.14.0
+djangorestframework-simplejwt==5.2.2
 firebase-admin==4.3.0
+google-api-core==1.34.0
+google-api-python-client==2.88.0
+google-auth==2.19.1
+google-auth-httplib2==0.1.0
+google-cloud-core==2.3.2
+google-cloud-firestore==2.11.1
+google-cloud-storage==2.9.0
+google-crc32c==1.5.0
+google-resumable-media==2.5.0
+googleapis-common-protos==1.59.0
+grpcio==1.54.2
+grpcio-status==1.48.2
+httplib2==0.22.0
+idna==3.4
+isort==5.12.0
+jedi==0.18.2
+kombu==4.6.11
+lazy-object-proxy==1.9.0
+mccabe==0.7.0
+msgpack==1.0.5
+parso==0.8.3
+Pillow==9.5.0
+platformdirs==3.9.1
+prompt-toolkit==3.0.38
+proto-plus==1.22.2
+protobuf==3.20.3
+psycopg2-binary==2.9.6
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+PyJWT==2.7.0
+pylint==2.17.4
+pyparsing==3.0.9
+python-crontab==2.7.1
+python-dateutil==2.8.2
+python-dotenv==0.10.3
+pytz==2023.3
+redis==4.0.0
+requests==2.31.0
+rsa==4.9
+six==1.16.0
+sqlparse==0.4.3
+tomli==2.0.1
+tomlkit==0.11.8
+typing_extensions==4.7.1
+tzdata==2023.3
+uritemplate==4.1.1
+urllib3==1.26.16
+vine==1.3.0
+wcwidth==0.2.6
+wrapt==1.15.0
