--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,7 @@ google-resumable-media==2.5.0
 googleapis-common-protos==1.59.0
 grpcio==1.54.2
 grpcio-status==1.48.2
+gunicorn==21.2.0
 httplib2==0.22.0
 idna==3.4
 isort==5.12.0
@@ -43,6 +44,7 @@ kombu==4.6.11
 lazy-object-proxy==1.9.0
 mccabe==0.7.0
 msgpack==1.0.5
+packaging==23.1
 parso==0.8.3
 Pillow==9.5.0
 platformdirs==3.9.1
