--- a/.gitignore
+++ b/.gitignore
@@ -100,3 +100,4 @@ assets/
 django_docker_project/templates/travello/index_old.html
 celerybeat.pid
 django_docker_project/e-learniverse-project-firebase-adminsdk.json
+/media
