--- a/django_docker_project/.env_docker
+++ b/django_docker_project/.env_docker
@@ -24,4 +24,6 @@ CELERY_RESULT_BACKEND = 'rpc://'
 
 CACHE_LOCATION = redis://redis_server:6379/1
 
+JWT_SECRET_KEY = "Sergio Ramos"
+
 GOOGLE_APPLICATION_CREDENTIALS = ".../django_docker_project/e-learniverse-project-firebase-adminsdk.json"
