--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ Django==3.1.2
 django-celery-beat==2.2.0
 django-celery-results==2.0.1
 django-debug-toolbar==3.1.1
+django-grappelli==2.14.2
 django-redis==5.0.0
 django-timezone-field==4.2.3
 djangorestframework==3.14.0
