--- a/django_docker_project/.env_docker
+++ b/django_docker_project/.env_docker
@@ -8,6 +8,10 @@ DEFAULT_DB_SCHEMA = "public"
 DEFAULT_DB_HOST = "travello_db"
 DEFAULT_DB_PORT = "5432"
 
+# STATIC & MEDIA CONFIGURATION
+STATIC_ROOT = "/var/www/static/"
+MEDIA_ROOT = "/var/www/media/"
+
 # SENDING EMAIL CONFIGURATION
 EMAIL_BACKEND = 'django.core.mail.backends.smtp.EmailBackend'
 EMAIL_HOST = 'smtp.gmail.com'
