--- a/django_docker_project/.env_docker
+++ b/django_docker_project/.env_docker
@@ -5,6 +5,8 @@ DEFAULT_DB_NAME = "telusko_web_backend"
 DEFAULT_DB_USER = "postgres"
 DEFAULT_DB_PASSWORD = "postgres"
 DEFAULT_DB_SCHEMA = "public"
+
+# This is the network IP address or hostname of the server running PostgreSQL. For example: "localhost", "192.168.0.94"... But since we are running it in Docker, with Docker "Internal" DNS we are just assigning "travello_db" to an IP Address
 DEFAULT_DB_HOST = "travello_db"
 DEFAULT_DB_PORT = "5432"
 
