- Second Database Configuration added in `settings.py` & `.env_docker` variable called `DB_NAME_2`

--- a/django_docker_project/.env_docker
+++ b/django_docker_project/.env_docker
@@ -10,6 +10,9 @@ DEFAULT_DB_SCHEMA = "public"
 DEFAULT_DB_HOST = "travello_db"
 DEFAULT_DB_PORT = "5432"
 
+# this is for the 2nd Database Configured in "settings.py"
+DB_NAME = 'e_learniverse_db_2'
+
 # STATIC & MEDIA CONFIGURATION
 STATIC_ROOT = "/var/www/static/"
 MEDIA_ROOT = "/var/www/media/"
@@ -32,4 +35,4 @@ CACHE_LOCATION = redis://redis_server:6379/1
 
 JWT_SECRET_KEY = "Sergio Ramos"
 
-GOOGLE_APPLICATION_CREDENTIALS = ".../django_docker_project/e-learniverse-project-firebase-adminsdk.json"
+GOOGLE_APPLICATION_CREDENTIALS = "django_docker_project/e-learniverse-project-firebase-adminsdk.json"
