--- a/django_docker_project/.env_docker
+++ b/django_docker_project/.env_docker
@@ -35,4 +35,6 @@ CACHE_LOCATION = redis://redis_server:6379/1
 
 JWT_SECRET_KEY = "Sergio Ramos"
 
+# Firebase Console > Project Settings > Service accounts Tab > Click "Generate new private key"
+# Download the .json file and put it in the "django_docker_project/" Directory
 GOOGLE_APPLICATION_CREDENTIALS = "django_docker_project/e-learniverse-project-firebase-adminsdk.json"
